Fixed ul to align vertically instead of horizontal

--- a/css/style.css
+++ b/css/style.css
@@ -269,12 +269,16 @@ nav a:hover{
     text-align: start;
     font-weight: bold;
     margin: 40px 0 30px 40px;
+    padding-left: 50px;
+}
+#mapcontainer ul{
+    display: grid;
 }
 #mapcontainer li {
     float: left;
-    display: block;
-   line-height: 2; 
-   
+    line-height: 2; 
+    text-align: left;
+    padding-left: 120px;
 }
 /* end of maps */
 
